syntax = "proto3";
option java_generic_services = true;
option java_package = "org.marketcetera.trading.rpc";
option java_outer_classname = "TradingRpc";
import "rpc_base.proto";
import "rpc_paging.proto";
import "rpc_trading_types.proto";

message OpenOrdersRequest {
    string sessionId = 1;
    PageRequest pageRequest = 2;
}

message OpenOrdersResponse {
    PageResponse pageResponse = 1;
    repeated OpenOrder orders = 2;
}

message SendOrderRequest {
    string sessionId = 1;
    repeated Order order = 2;
}

message SendOrderResponse {
    repeated OrderResponse orderResponse = 1;
}

message OrderResponse {
    string orderid = 1;
    bool failed = 2;
    string message = 3;
}

message AddTradeMessageListenerRequest {
    string sessionId = 1;
    string listenerId = 2;
}

message TradeMessageListenerResponse {
    TradeMessage tradeMessage = 1;
}

message RemoveTradeMessageListenerRequest {
    string sessionId = 1;
    string listenerId = 2;
}

message RemoveTradeMessageListenerResponse {
    Status status = 1;
}

message AddBrokerStatusListenerRequest {
    string sessionId = 1;
    string listenerId = 2;
}

message BrokerStatusListenerResponse {
    BrokerStatus brokerStatus = 1;
}

message RemoveBrokerStatusListenerRequest {
    string sessionId = 1;
    string listenerId = 2;
}

message RemoveBrokerStatusListenerResponse {
    Status status = 1;
}

service TradingRpcService {
    rpc login(LoginRequest) returns (LoginResponse);
    rpc logout(LogoutRequest) returns (LogoutResponse);
    rpc heartbeat(HeartbeatRequest) returns (stream HeartbeatResponse) {}
    rpc getOpenOrders(OpenOrdersRequest) returns (OpenOrdersResponse);
    rpc sendOrders(SendOrderRequest) returns (SendOrderResponse);
    rpc addTradeMessageListener(AddTradeMessageListenerRequest) returns (stream TradeMessageListenerResponse);
    rpc removeTradeMessageListener(RemoveTradeMessageListenerRequest) returns (RemoveTradeMessageListenerResponse);
    rpc addBrokerStatusListener(AddBrokerStatusListenerRequest) returns (stream BrokerStatusListenerResponse);
    rpc removeBrokerStatusListener(RemoveBrokerStatusListenerRequest) returns (RemoveBrokerStatusListenerResponse);
}
